Fix cart height issue that caused order button to flow out of container

--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -122,7 +122,7 @@ h1 {
   line-height: 32px;
   width: 384px;
   background-color: $clr-white;
-  height: auto;
+  height: calc(100% + 100px);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
